k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${QUOTES_SOURCE}-quote-service
  labels:
    app.kubernetes.io/name: ${QUOTES_SOURCE}-quote-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${QUOTES_SOURCE}-quote-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${QUOTES_SOURCE}-quote-service
    spec:
      containers:
        - name: ${QUOTES_SOURCE}-quote-service
          image: crackitty/quotes-service
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
